--- a/oak-core/pom.xml
+++ b/oak-core/pom.xml
@@ -32,6 +32,10 @@
   <name>Oak Core</name>
   <packaging>bundle</packaging>
 
+  <properties>
+      <oak.version>1.6.0</oak.version>
+  </properties>
+
   <distributionManagement>
     <repository>
       <id>archiva</id>
@@ -183,19 +187,19 @@
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>oak-commons</artifactId>
-      <version>1.6.0</version>
+      <version>${oak.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>oak-commons</artifactId>
-      <version>1.6.0</version>
+      <version>${oak.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>oak-blob</artifactId>
-      <version>1.6.0</version>
+      <version>${oak.version}</version>
     </dependency>
     <!-- General utility libraries -->
     <dependency>
@@ -333,7 +337,7 @@
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>oak-blob</artifactId>
-      <version>1.5.7</version>
+      <version>${oak.version}</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
